force-app/main/default/objects/Semen_Sample__c/Semen_Sample__c.object-meta.xml
<CustomObject>
    <label>Semen Sample</label>
    <nameField>
        <label>Semen Sample Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Semen Samples</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>