force-app/main/default/objects/Semen_Sample__c/fields/Abstinence__c.field-meta.xml
<CustomField>
    <fullName>Abstinence__c</fullName>
    <label>Abstinence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>