force-app/main/default/objects/Semen_Sample__c/fields/Agglutination__c.field-meta.xml
<CustomField>
    <fullName>Agglutination__c</fullName>
    <label>Agglutination</label>
    <length>5</length>
    <type>Text</type>
</CustomField>