force-app/main/default/objects/Semen_Sample__c/fields/Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Date__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(Analysis_Date_Time__c))) &amp; &quot;/&quot; &amp; TEXT(MONTH(DATEVALUE(Analysis_Date_Time__c))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(Analysis_Date_Time__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analysis Date</label>
    <type>Text</type>
</CustomField>