force-app/main/default/objects/Semen_Sample__c/fields/Analysis_ID__c.field-meta.xml
<CustomField>
    <fullName>Analysis_ID__c</fullName>
    <displayFormat>SA-{00000}</displayFormat>
    <label>Analysis ID</label>
    <type>AutoNumber</type>
</CustomField>