force-app/main/default/objects/Semen_Sample__c/fields/Analysis_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prep Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Semen_Samples2</relationshipName>
    <type>Lookup</type>
</CustomField>