force-app/main/default/objects/Semen_Sample__c/fields/Analysis_Time__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Time__c</fullName>
    <formula>LPAD(TEXT(HOUR(TIMEVALUE(Analysis_Date_Time__c))), 2, &apos;0&apos;) &amp; &apos;:&apos; &amp; LPAD(TEXT(MINUTE(TIMEVALUE(Analysis_Date_Time__c))), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analysis Time</label>
    <type>Text</type>
</CustomField>