force-app/main/default/objects/Semen_Sample__c/fields/Analysis_Witness__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analysis Witness</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Semen_Samples1</relationshipName>
    <type>Lookup</type>
</CustomField>