force-app/main/default/objects/Semen_Sample__c/fields/Appearance__c.field-meta.xml
<CustomField>
    <fullName>Appearance__c</fullName>
    <label>Appearance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Cloudy</fullName>
            </value>
            <value>
                <fullName>Gel Bodies</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>