force-app/main/default/objects/Semen_Sample__c/fields/Collection_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Collection_Date_Only__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(Collection_Date_Time__c))) &amp; &quot;/&quot; &amp; TEXT(MONTH(DATEVALUE(Collection_Date_Time__c))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(Collection_Date_Time__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Date Only</label>
    <type>Text</type>
</CustomField>