force-app/main/default/objects/Semen_Sample__c/fields/Collection_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Collection_Date_Time__c</fullName>
    <label>Collection Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>