force-app/main/default/objects/Semen_Sample__c/fields/Collection_Time_Only__c.field-meta.xml
<CustomField>
    <fullName>Collection_Time_Only__c</fullName>
    <formula>IF(
  AND(
    MONTH(DATEVALUE(Collection_Date_Time__c) + 11/24) = 4,
    DAY(DATEVALUE(Collection_Date_Time__c) + 11/24) &lt;= 7,
    WEEKDAY(DATEVALUE(Collection_Date_Time__c) + 11/24) = 1
  ),
  TIMEVALUE(Collection_Date_Time__c + 10/24), 
  IF(
    AND(
      MONTH(DATEVALUE(Collection_Date_Time__c) + 11/24) = 10,
      DAY(DATEVALUE(Collection_Date_Time__c) + 11/24) &lt;= 7,
      WEEKDAY(DATEVALUE(Collection_Date_Time__c) + 11/24) = 1
    ),
    TIMEVALUE(Collection_Date_Time__c + 10/24), 
    IF(
      AND(
        MONTH(DATEVALUE(Collection_Date_Time__c) + 11/24) &gt;= 4,
        MONTH(DATEVALUE(Collection_Date_Time__c) + 11/24) &lt;= 9
      ),
      TIMEVALUE(Collection_Date_Time__c + 10/24), 
      TIMEVALUE(Collection_Date_Time__c + 11/24) 
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Time Only</label>
    <type>Time</type>
</CustomField>