force-app/main/default/objects/Semen_Sample__c/fields/Complete_Sample__c.field-meta.xml
<CustomField>
    <fullName>Complete_Sample__c</fullName>
    <label>Complete Sample?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>