force-app/main/default/objects/Semen_Sample__c/fields/Concentration__c.field-meta.xml
<CustomField>
    <fullName>Concentration__c</fullName>
    <label>Concentration</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>