force-app/main/default/objects/Semen_Sample__c/fields/Count_1__c.field-meta.xml
<CustomField>
    <fullName>Count_1__c</fullName>
    <label>Count 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>