force-app/main/default/objects/Semen_Sample__c/fields/Count_2__c.field-meta.xml
<CustomField>
    <fullName>Count_2__c</fullName>
    <label>Count 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>