force-app/main/default/objects/Semen_Sample__c/fields/Count_Dilution__c.field-meta.xml
<CustomField>
    <fullName>Count_Dilution__c</fullName>
    <label>Count Dilution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:2</fullName>
            </value>
            <value>
                <fullName>1:5</fullName>
            </value>
            <value>
                <fullName>1:10</fullName>
                <default>true</default>
                <label>1:10</label>
            </value>
            <value>
                <fullName>1:20</fullName>
            </value>
            <value>
                <fullName>1:50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>