force-app/main/default/objects/Semen_Sample__c/fields/Created_In_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Created_In_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created In Cycle</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>Semen Samples</relationshipLabel>
    <relationshipName>Semen_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>