force-app/main/default/objects/Semen_Sample__c/fields/Difference_Between_Counts__c.field-meta.xml
<CustomField>
    <fullName>Difference_Between_Counts__c</fullName>
    <label>Difference Between Counts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>