force-app/main/default/objects/Semen_Sample__c/fields/Final_Prog_Grade__c.field-meta.xml
<CustomField>
    <fullName>Final_Prog_Grade__c</fullName>
    <label>Final Prog Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prog_Grade</valueSetName>
    </valueSet>
</CustomField>