force-app/main/default/objects/Semen_Sample__c/fields/Immotile_as__c.field-meta.xml
<CustomField>
    <fullName>Immotile_as__c</fullName>
    <label>Immotile (as %)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>