force-app/main/default/objects/Semen_Sample__c/fields/Lab_Number__c.field-meta.xml
<CustomField>
    <fullName>Lab_Number__c</fullName>
    <label>Lab Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>