force-app/main/default/objects/Semen_Sample__c/fields/Linked_Result__c.field-meta.xml
<CustomField>
    <fullName>Linked_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Result</label>
    <referenceTo>Result__c</referenceTo>
    <relationshipLabel>Semen Samples</relationshipLabel>
    <relationshipName>Semen_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>