force-app/main/default/objects/Semen_Sample__c/fields/MAR_Test_Ig_G__c.field-meta.xml
<CustomField>
    <fullName>MAR_Test_Ig_G__c</fullName>
    <label>MAR Test Ig G</label>
    <length>4</length>
    <type>Text</type>
</CustomField>