force-app/main/default/objects/Semen_Sample__c/fields/Morphology__c.field-meta.xml
<CustomField>
    <fullName>Morphology__c</fullName>
    <label>Morphology</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>