force-app/main/default/objects/Semen_Sample__c/fields/Morphology_Witness__c.field-meta.xml
<CustomField>
    <fullName>Morphology_Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Morphology Witness</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Semen_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>