force-app/main/default/objects/Semen_Sample__c/fields/Next_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Date__c</fullName>
    <label>Next Billing Date</label>
    <summarizedField>Semen_Straw__c.Next_Billing_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Semen_Straw__c.Fate__c</field>
        <operation>equals</operation>
        <value>Frozen</value>
    </summaryFilterItems>
    <summaryForeignKey>Semen_Straw__c.Semen_Sample__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>