force-app/main/default/objects/Semen_Sample__c/fields/Non_Motile__c.field-meta.xml
<CustomField>
    <fullName>Non_Motile__c</fullName>
    <formula>1- Total_Motility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Motile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>