force-app/main/default/objects/Semen_Sample__c/fields/Origin_of_Sample__c.field-meta.xml
<CustomField>
    <fullName>Origin_of_Sample__c</fullName>
    <label>Origin of Sample</label>
    <length>50</length>
    <type>Text</type>
</CustomField>