force-app/main/default/objects/Semen_Sample__c/fields/Original_Storage_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Storage_Expiry_Date__c</fullName>
    <formula>DATE(
  YEAR( Storage_Date__c ) + 10,
  MONTH(Storage_Date__c ),
  DAY(Storage_Date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Storage Expiry Date</label>
    <type>Date</type>
</CustomField>