force-app/main/default/objects/Semen_Sample__c/fields/Patient_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address__c</fullName>
    <formula>Patient_Donor__r.Mailing_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Address</label>
    <type>Text</type>
</CustomField>