force-app/main/default/objects/Semen_Sample__c/fields/Patient_Donor__c.field-meta.xml
<CustomField>
    <fullName>Patient_Donor__c</fullName>
    <label>Patient / Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Semen Samples</relationshipLabel>
    <relationshipName>Semen_Samples</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>