force-app/main/default/objects/Semen_Sample__c/fields/Patient_Donor_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Patient_Donor_Date_of_Birth__c</fullName>
    <formula>Patient_Donor__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient / Donor Date of Birth</label>
    <type>Date</type>
</CustomField>