force-app/main/default/objects/Semen_Sample__c/fields/Patient_Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Donor_Name__c</fullName>
    <formula>Patient_Donor__r.FirstName &amp; &quot; &quot;&amp; Patient_Donor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient / Donor Name</label>
    <type>Text</type>
</CustomField>