force-app/main/default/objects/Semen_Sample__c/fields/pH__c.field-meta.xml
<CustomField>
    <fullName>pH__c</fullName>
    <label>pH</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>