force-app/main/default/objects/Semen_Sample__c/fields/Prep_Count_x10_6__c.field-meta.xml
<CustomField>
    <fullName>Prep_Count_x10_6__c</fullName>
    <label>Initial Count (x10^6)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>