force-app/main/default/objects/Semen_Sample__c/fields/Prep_Final_Count__c.field-meta.xml
<CustomField>
    <fullName>Prep_Final_Count__c</fullName>
    <label>Prep Final Count (Deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>