force-app/main/default/objects/Semen_Sample__c/fields/Prep_Final_Count_Text__c.field-meta.xml
<CustomField>
    <fullName>Prep_Final_Count_Text__c</fullName>
    <label>Prep Final Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>