force-app/main/default/objects/Semen_Sample__c/fields/Prep_Final_Motility__c.field-meta.xml
<CustomField>
    <fullName>Prep_Final_Motility__c</fullName>
    <label>Prep Final Motility (Decreciated)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>