force-app/main/default/objects/Semen_Sample__c/fields/Prep_Final_Motility_Text__c.field-meta.xml
<CustomField>
    <fullName>Prep_Final_Motility_Text__c</fullName>
    <label>Prep Final Motility</label>
    <length>50</length>
    <type>Text</type>
</CustomField>