force-app/main/default/objects/Semen_Sample__c/fields/Prep_Insem_Volume__c.field-meta.xml
<CustomField>
    <fullName>Prep_Insem_Volume__c</fullName>
    <label>Prep Insem Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>