force-app/main/default/objects/Semen_Sample__c/fields/Prep_Motility__c.field-meta.xml
<CustomField>
    <fullName>Prep_Motility__c</fullName>
    <label>Initial Motility</label>
    <length>50</length>
    <type>Text</type>
</CustomField>