force-app/main/default/objects/Semen_Sample__c/fields/Produced_Location__c.field-meta.xml
<CustomField>
    <fullName>Produced_Location__c</fullName>
    <label>Produced Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offsite</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Ararat</fullName>
                <isActive>false</isActive>
                <label>Ararat</label>
            </value>
            <value>
                <fullName>BDPC</fullName>
                <isActive>false</isActive>
                <label>BDPC</label>
            </value>
            <value>
                <fullName>Epworth</fullName>
                <isActive>false</isActive>
                <label>Epworth</label>
            </value>
            <value>
                <fullName>MDHS</fullName>
                <isActive>false</isActive>
                <label>MDHS</label>
            </value>
            <value>
                <fullName>WPH</fullName>
                <isActive>false</isActive>
                <label>WPH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>