force-app/main/default/objects/Semen_Sample__c/fields/Rapid_Progressive__c.field-meta.xml
<CustomField>
    <fullName>Rapid_Progressive__c</fullName>
    <label>Rapid Progressive</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>