force-app/main/default/objects/Semen_Sample__c/fields/Referral_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Request_Date__c</fullName>
    <label>Referral Request Date</label>
    <type>Date</type>
</CustomField>