force-app/main/default/objects/Semen_Sample__c/fields/Referring_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Referring_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Semen Samples</relationshipLabel>
    <relationshipName>Semen_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>