force-app/main/default/objects/Semen_Sample__c/fields/Relationship_to_Female__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Female__c</fullName>
    <label>Relationship to Female</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Open ID</fullName>
            </value>
            <value>
                <fullName>Know Donor</fullName>
                <label>Known Donor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>