force-app/main/default/objects/Semen_Sample__c/fields/Reserved_For__c.field-meta.xml
<CustomField>
    <fullName>Reserved_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserved For</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Semen Samples</relationshipLabel>
    <relationshipName>Semen_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>