force-app/main/default/objects/Semen_Sample__c/fields/Rows_Counts__c.field-meta.xml
<CustomField>
    <fullName>Rows_Counts__c</fullName>
    <label>Rows Counted</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>