force-app/main/default/objects/Semen_Sample__c/fields/Sample_Production_Method__c.field-meta.xml
<CustomField>
    <fullName>Sample_Production_Method__c</fullName>
    <label>Sample Production Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Semen_Sample_Production_Method</valueSetName>
    </valueSet>
</CustomField>