force-app/main/default/objects/Semen_Sample__c/fields/Sluggish_Progressive__c.field-meta.xml
<CustomField>
    <fullName>Sluggish_Progressive__c</fullName>
    <label>Sluggish Progressive</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>