force-app/main/default/objects/Semen_Sample__c/fields/Storage_Date__c.field-meta.xml
<CustomField>
    <fullName>Storage_Date__c</fullName>
    <label>Freeze Date Rollup (Min)</label>
    <summarizedField>Semen_Straw__c.Storage_Date__c</summarizedField>
    <summaryForeignKey>Semen_Straw__c.Semen_Sample__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>