force-app/main/default/objects/Semen_Sample__c/fields/Storage_Date_Actual__c.field-meta.xml
<CustomField>
    <fullName>Storage_Date_Actual__c</fullName>
    <label>Storage Date</label>
    <type>Date</type>
</CustomField>