force-app/main/default/objects/Semen_Sample__c/fields/Total_Motile_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Motile_Count__c</fullName>
    <formula>Prep_Insem_Volume__c * Concentration__c * VALUE(Prep_Final_Motility_Text__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Motile Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>