force-app/main/default/objects/Semen_Sample__c/fields/Total_Sperm__c.field-meta.xml
<CustomField>
    <fullName>Total_Sperm__c</fullName>
    <formula>Volume__c * Concentration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sperm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>