force-app/main/default/objects/Semen_Sample__c/fields/Total_Straws_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Total_Straws_Frozen__c</fullName>
    <label>Total Straws Frozen</label>
    <summaryFilterItems>
        <field>Semen_Straw__c.Fate__c</field>
        <operation>equals</operation>
        <value>Frozen</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Semen_Straw__c.Exported_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Semen_Straw__c.Semen_Sample__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>