force-app/main/default/objects/Semen_Sample__c/fields/Viscosity__c.field-meta.xml
<CustomField>
    <fullName>Viscosity__c</fullName>
    <label>Viscosity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Slight</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Extreme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>