force-app/main/default/objects/Semen_Sample__c/listViews/All_Semen_Samples.listView-meta.xml
<ListView>
    <fullName>All_Semen_Samples</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Semen Samples</label>
</ListView>